<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >   
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <TextView 
            android:id="@+id/fragmentAboutTxtViewVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_fragment_version"/>
        <TextView 
            android:id="@+id/fragmentAboutTxtViewAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/about_fragment_author"/>
        <TextView 
            android:id="@+id/fragmentAboutTxtViewLicense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/about_fragment_license"/>
    </LinearLayout>


</RelativeLayout>