<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/white">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        style="@style/TextViewTitle"
	        android:text="@string/add_fechamento_ativo_dialog_title"/>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:gravity="center">
	        
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:gravity="center">
	            
	            <TextView
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="3"
	                android:text="@string/add_ativo_dialog_tipo"/>
	            
			    <Spinner 
			        android:id="@+id/addAtivoDialogSpinnerTipo"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="7"/>
		    </LinearLayout>
		    
		    
  	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:gravity="center">
	            
	            <TextView
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="3"
	                android:text="@string/add_fechamento_ativo_dialog_fechamento"/>
			    <EditText 
			        android:id="@+id/addFechamentoAtivoDialogEditTxtFechamento"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="7"
			        android:gravity="center"
			        android:inputType="numberDecimal|numberSigned"
			        android:hint="@string/add_transacao_dialog_valor_hint"/>
		    </LinearLayout>
		    
   		    <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:gravity="center">
	            
	            <TextView
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="3"
	                android:text="@string/add_ativo_dialog_data"/>
			    <Button 
			        android:id="@+id/addAtivoDialogBtnData"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="7"
			        android:gravity="center"
			        android:text="04/05/2014"/>
		    </LinearLayout>		    
		    
	    </LinearLayout>
	    
    </LinearLayout>

</RelativeLayout>
