<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_ativo_event_dialog_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/add_ativo_event_dialog_price" />

                <EditText
                    android:id="@+id/addAtivoEventDialogEditTxtPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:gravity="center"
                    android:hint="@string/add_ativo_event_dialog_price_hint" />
            </LinearLayout>
            
             <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:gravity="center">
	            
	            <TextView
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="3"
	                android:text="@string/add_ativo_event_dialog_data"/>
			    <Button 
			        android:id="@+id/addAtivoEventDialogBtnData"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight="7"
			        android:gravity="center"
			        android:text="04/05/2014"/>
		    </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>